--- a/MaxTest/appsettings.json
+++ b/MaxTest/appsettings.json
@@ -3,13 +3,16 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Information"
       }
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Information"
       }
     }
+  },
+  "ConnectionStrings": {
+    "PostgreConnection":"User ID=maxtest;Password=maxtest;Server=localhost;Port=5432;Database=maxtest;Pooling=true;"
   }
 }
